Добавил логику для alarma в комутор При нажатии кнопки стоп, все кнопки назад активируются, у преса стоп больше не заедает Исправил не большой баг с выбросом исключения для TOU

--- a/SCME.Service/Properties/Settings.settings
+++ b/SCME.Service/Properties/Settings.settings
@@ -179,5 +179,8 @@
     <Setting Name="IsWriteSafetyRegister" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AlarmEmulation" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
