--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -227,6 +227,9 @@
       <setting name="IsWriteSafetyRegister" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="AlarmEmulation" serializeAs="String">
+        <value>False</value>
+      </setting>
     </SCME.Service.Properties.Settings>
   </applicationSettings>
   <startup>
