ЗУ в режиме сборки не сжимается не расжимается, параметр в UI WindowIs1280x1024 отвечает за запуск нормального окна окна с соответствующим разрешением

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -228,7 +228,7 @@
         <value>True</value>
       </setting>
       <setting name="AlarmEmulation" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </SCME.Service.Properties.Settings>
   </applicationSettings>
