--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -68,7 +68,7 @@
         <value>False</value>
       </setting>
       <setting name="TechPassword" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Localization" serializeAs="String">
         <value>ru-RU</value>
@@ -162,6 +162,9 @@
         <value>False</value>
       </setting>
       <setting name="TOUIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="WindowIs1280x1024" serializeAs="String">
         <value>True</value>
       </setting>
     </SCME.UI.Properties.Settings>
