Переделал логику сохранения 1 ПЗ ППЭ и номер ППЭ 2 Номер ПЗ и сер номер прибора Сначала проверяется параметр DUTЕype в случаи значения Profile, берётся значение профиля

--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -167,6 +167,9 @@
       <setting name="WindowIs1280x1024" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="DUTType" serializeAs="String">
+        <value>Profile</value>
+      </setting>
     </SCME.UI.Properties.Settings>
   </userSettings>
 </configuration>
