--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -119,5 +119,8 @@
     <Setting Name="WindowIs1280x1024" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DUTType" Type="SCME.Types.DUTType" Scope="User">
+      <Value Profile="(Default)">Profile</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
