--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -87,7 +87,7 @@
         <value>6</value>
       </setting>
       <setting name="IsClampingSystemConnected" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DBOptionsLogs" serializeAs="String">
         <value>synchronous=Full;failifmissing=True;</value>
@@ -228,7 +228,7 @@
         <value>True</value>
       </setting>
       <setting name="AlarmEmulation" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </SCME.Service.Properties.Settings>
   </applicationSettings>
