--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -146,9 +146,9 @@
       <Project>{41fad811-1a7a-4ac2-95e8-6195f905e1c6}</Project>
       <Name>SCME.InterfaceImplementations</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SCME.LOGGER\SCME.Logger.csproj">
+    <ProjectReference Include="..\SCME.Logger\SCME.LOGGER.csproj">
       <Project>{cdee465e-8961-4d91-92fc-da2615683951}</Project>
-      <Name>SCME.Logger</Name>
+      <Name>SCME.LOGGER</Name>
     </ProjectReference>
     <ProjectReference Include="..\SCME.TYPES\SCME.Types.csproj">
       <Project>{af537bdd-6460-4cca-b894-added01e6b94}</Project>
