Добавил OperatorBuildModeButton для отображения кнопки "Оператор в режиме сборки". Исправил область для конфигов с пользователь в приложение.
Добавил xml файл с конфигом клавиатуры

--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -154,13 +154,6 @@
       <setting name="MMECode" serializeAs="String">
         <value>MME005</value>
       </setting>
-    </SCME.UI.Properties.Settings>
-  </applicationSettings>
-  <userSettings>
-    <SCME.UI.Properties.Settings>
-      <setting name="ReadOnlyProfiles" serializeAs="String">
-        <value>False</value>
-      </setting>
       <setting name="TOUIsVisible" serializeAs="String">
         <value>True</value>
       </setting>
@@ -169,6 +162,16 @@
       </setting>
       <setting name="DUTType" serializeAs="String">
         <value>Profile</value>
+      </setting>
+      <setting name="OperatorBuildModeIsEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </SCME.UI.Properties.Settings>
+  </applicationSettings>
+  <userSettings>
+    <SCME.UI.Properties.Settings>
+      <setting name="ReadOnlyProfiles" serializeAs="String">
+        <value>False</value>
       </setting>
     </SCME.UI.Properties.Settings>
   </userSettings>
