--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -113,14 +113,17 @@
     <Setting Name="MMECode" Type="System.String" Scope="Application">
       <Value Profile="(Default)">MME005</Value>
     </Setting>
-    <Setting Name="TOUIsVisible" Type="System.Boolean" Scope="User">
+    <Setting Name="TOUIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="WindowIs1280x1024" Type="System.Boolean" Scope="User">
+    <Setting Name="WindowIs1280x1024" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DUTType" Type="SCME.Types.DUTType" Scope="User">
+    <Setting Name="DUTType" Type="SCME.Types.DUTType" Scope="Application">
       <Value Profile="(Default)">Profile</Value>
+    </Setting>
+    <Setting Name="OperatorBuildModeIsEnabled" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
