LocalOrCentral => IsLocal hotfix and bin

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -104,7 +104,7 @@
       <setting name="BVTReadGraph" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="LocalOrCentral" serializeAs="String">
+      <setting name="IsLocal" serializeAs="String">
         <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
