--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -49,6 +49,9 @@
       <setting name="CurrentCulture" serializeAs="String">
         <value>ru-RU</value>
       </setting>
+      <setting name="IsTouch" serializeAs="String">
+        <value>True</value>
+      </setting>
     </SCME.ProfileBuilder.Properties.Settings>
   </applicationSettings>
   <userSettings>
@@ -73,6 +76,9 @@
       </setting>
       <setting name="Theme" serializeAs="String">
         <value />
+      </setting>
+      <setting name="LastSelectedMMECode" serializeAs="String">
+        <value>MME005</value>
       </setting>
     </SCME.ProfileBuilder.Properties.Settings>
   </userSettings>
