--- a/SCME.ProfileBuilder/packages.config
+++ b/SCME.ProfileBuilder/packages.config
@@ -6,4 +6,5 @@
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="3.1.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
