--- a/SCME.WpfControlLibrary/app.config
+++ b/SCME.WpfControlLibrary/app.config
@@ -13,6 +13,9 @@
             <setting name="AppTheme" serializeAs="String">
                 <value>BaseLight</value>
             </setting>
+            <setting name="LastSelectedMMECode" serializeAs="String">
+                <value>MME005</value>
+            </setting>
         </SCME.WpfControlLibrary.Properties.Settings>
     </userSettings>
 </configuration>
