--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -85,20 +85,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddTestParametersDelegate.cs" />
-    <Compile Include="CustomControls\CheckBox.cs" />
     <Compile Include="CustomControls\ProfilesPage.xaml.cs">
       <DependentUpon>ProfilesPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CustomControls\RadioButton.cs" />
-    <Compile Include="CustomControls\SmartLabel.xaml.cs">
-      <DependentUpon>SmartLabel.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="DataProviders\TestParameterDictionary.cs" />
+    <Compile Include="DataProviders\TestTypeEnumDictionary.cs" />
     <Compile Include="IValueConverters\BvtTypeToStringConverter.cs" />
     <Compile Include="IValueConverters\FrequencyDivisorToFrequency.cs" />
     <Compile Include="IValueConverters\MeasureModeToVisibilityConverter.cs" />
     <Compile Include="IValueConverters\TDcFallRateValueFromEnum.cs" />
     <Compile Include="CustomControls\NumericUpDown.cs" />
-    <Compile Include="TestParametersDictionary.cs" />
     <Compile Include="IValueConverters\TestParametrToString.cs" />
     <Compile Include="IValueConverters\TOsvRateValueFromEnum.cs" />
     <Compile Include="ViewModels\ProfilesPageVM.cs" />
@@ -119,10 +115,6 @@
     <Page Include="CustomControls\ProfilesPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="CustomControls\SmartLabel.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="DataTemplates\TestParameters\RACDataTemplate.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -233,6 +225,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Styles\CheckBox.xaml" />
+    <Page Include="Resources\Styles\NumericUpDown.xaml" />
     <Page Include="Resources\Styles\RadioButton.xaml" />
     <Page Include="Resources\ValueConvertersDictionary.xaml">
       <SubType>Designer</SubType>
