Комит перед рефакторингом ProfileDictionary

--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -14,6 +14,7 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -77,15 +78,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackGround.cs" />
-    <Compile Include="Common\ILoadProfilesServiceTest.cs" />
+    <Compile Include="Common\IDbService.cs" />
+    <Compile Include="Common\ILoadProfilesService.cs" />
     <Compile Include="Common\InserterBaseTestParametersAndNormatives.cs" />
-    <Compile Include="Common\ISaveProfileServiceTest.cs" />
-    <Compile Include="Common\LoadProfilesServiceTest.cs" />
-    <Compile Include="NewImplement\MSSQL\MSSQLLoadProfilesServiceTest.cs" />
-    <Compile Include="Common\SaveProfilesServiceTest.cs" />
-    <Compile Include="NewImplement\MSSQL\MSSQLSaveProfileServiceTest.cs" />
-    <Compile Include="NewImplement\SQLite\SQLiteSaveProfilesServiceTest.cs" />
-    <Compile Include="NewImplement\SQLite\SQLiteLoadProfilesServiceTest.cs" />
+    <Compile Include="Common\ISaveProfileService.cs" />
+    <Compile Include="Common\DbService\DbService.cs" />
+    <Compile Include="Common\DbService\DbServiceLoad.cs" />
+    <Compile Include="Common\DbService\DbServiceSave.cs" />
+    <Compile Include="NewImplement\MSSQL\MSSQLDbService.cs" />
+    <Compile Include="NewImplement\SQLite\SQLiteDbService.cs" />
     <Compile Include="Common\TDbCommandParametr.cs" />
     <Compile Include="MigratorInserter.cs" />
     <Compile Include="MigratorInserterTemplate.cs" />
@@ -117,7 +118,6 @@
     <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
