--- a/SCME.WpfControlLibrary/Properties/Settings.settings
+++ b/SCME.WpfControlLibrary/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LastSelectedMMECode" Type="System.String" Scope="User">
       <Value Profile="(Default)">MME005</Value>
     </Setting>
+    <Setting Name="FontScaling" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
