--- a/SCME.UI/packages.config
+++ b/SCME.UI/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="Fody" version="5.0.6" targetFramework="net452" developmentDependency="true" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
+  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="3.0.1" targetFramework="net452" />
 </packages>
