--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -84,7 +84,11 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddTestParametersDelegate.cs" />
+    <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="CustomControls\DialogWindow.xaml.cs">
+      <DependentUpon>DialogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CustomControls\NumericUpDown.cs" />
     <Compile Include="CustomControls\ProfilesPage.xaml.cs">
       <DependentUpon>ProfilesPage.xaml</DependentUpon>
     </Compile>
@@ -94,9 +98,8 @@
     <Compile Include="IValueConverters\FrequencyDivisorToFrequency.cs" />
     <Compile Include="IValueConverters\MeasureModeToVisibilityConverter.cs" />
     <Compile Include="IValueConverters\TDcFallRateValueFromEnum.cs" />
-    <Compile Include="CustomControls\NumericUpDown.cs" />
-    <Compile Include="IValueConverters\TestParametrToString.cs" />
     <Compile Include="IValueConverters\TOsvRateValueFromEnum.cs" />
+    <Compile Include="IValueConverters\TypeTestParameterToString.cs" />
     <Compile Include="ResourceBinding.cs" />
     <Compile Include="ViewModels\ProfilesPageVM.cs" />
     <Compile Include="ViewModels\ProfilesPage\AddTestParametrUserControlVM.cs" />
@@ -112,6 +115,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="CustomControls\DialogWindow.xaml" />
     <Page Include="CustomControls\ProfilesPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -132,15 +136,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Resources\Common.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="CustomControls\ProfilesPageComponents\ListViewTestParametersUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControls\ProfilesPageComponents\AddTestParametrUserControl.xaml">
+    <Page Include="CustomControls\ProfilesPageComponents\AddTestParameterUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -157,7 +157,7 @@
       <DependentUpon>ListViewTestParametersUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControls\ProfilesPageComponents\AddTestParametrUserControl.xaml.cs">
-      <DependentUpon>AddTestParametrUserControl.xaml</DependentUpon>
+      <DependentUpon>AddTestParameterUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControls\ValidatingTextBox.xaml.cs">
       <DependentUpon>ValidatingTextBox.xaml</DependentUpon>
@@ -224,14 +224,24 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\Styles\CheckBox.xaml" />
-    <Page Include="Resources\Styles\CustomThemePurple.xaml" />
-    <Page Include="Resources\Styles\NumericUpDown.xaml" />
-    <Page Include="Resources\Styles\RadioButton.xaml" />
     <Page Include="Resources\ValueConvertersDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\Button.xaml" />
+    <Page Include="Styles\CheckBox.xaml" />
+    <Page Include="Styles\Colors.xaml" />
+    <Page Include="Styles\ComboBox.xaml" />
+    <Page Include="Styles\Common.xaml" />
+    <Page Include="Styles\Controls.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\ListViewItemTestParameter.xaml" />
+    <Page Include="Styles\NumericUpDown.xaml" />
+    <Page Include="Styles\RadioButton.xaml" />
+    <Page Include="Styles\TextBox.xaml" />
+    <Page Include="Styles\TreeViewItemProfile.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IValueConverters\VtmTestTypeToStringConverter.cs" />
