--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
@@ -78,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackGround.cs" />
+    <Compile Include="Common\DbService\DbServiceMigration.cs" />
     <Compile Include="Common\InserterBaseTestParametersAndNormatives.cs" />
     <Compile Include="Common\DbService\DbService.cs" />
     <Compile Include="Common\DbService\DbServiceLoad.cs" />
