--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -46,7 +46,7 @@
                           contract="SCME.Types.IDatabaseCommunicationService" />
             </service>
             <service name="SCME.InterfaceImplementations.NewImplement.SQLite.SQLiteDbService">
-                <endpoint address="net.tcp://127.0.0.1:800/SCME/LocalDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"  />
+                <endpoint address="net.tcp://127.0.0.1:800/SCME/LocalDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="LocalDatabase" contract="SCME.Types.Database.IDbService"/>
             </service>
         </services>
 
@@ -206,7 +206,7 @@
                 <value>True</value>
             </setting>
             <setting name="MMECode" serializeAs="String">
-                <value>MME005</value>
+                <value>MME002</value>
             </setting>
             <setting name="QrrTqNode" serializeAs="String">
                 <value>10</value>
