--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Common\DbService\DbService.cs" />
     <Compile Include="Common\DbService\DbServiceLoad.cs" />
     <Compile Include="Common\DbService\DbServiceSave.cs" />
+    <Compile Include="Common\ProfileCache.cs" />
     <Compile Include="NewImplement\MSSQL\MSSQLDbService.cs" />
     <Compile Include="NewImplement\SQLite\SQLiteDbService.cs" />
     <Compile Include="Common\TDbCommandParametr.cs" />
