--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -92,8 +92,15 @@
     <Compile Include="CustomControls\ProfilesPage.xaml.cs">
       <DependentUpon>ProfilesPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomControls\TextBoxWithTimer.cs" />
     <Compile Include="DataProviders\TestParameterDictionary.cs" />
     <Compile Include="DataProviders\TestTypeEnumDictionary.cs" />
+    <Compile Include="DataTemplates\MmeCodeCheckboxDataTemplate.xaml.cs">
+      <DependentUpon>MmeCodeCheckboxDataTemplate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DataTemplates\ProfileDataTemplate.xaml.cs">
+      <DependentUpon>ProfileDataTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DataTemplates\TestParameters\ClampCommutationDataTemplate.xaml.cs">
       <DependentUpon>ClampCommutationDataTemplate.xaml</DependentUpon>
     </Compile>
@@ -104,6 +111,8 @@
     <Compile Include="IValueConverters\TOsvRateValueFromEnum.cs" />
     <Compile Include="IValueConverters\TypeTestParameterToString.cs" />
     <Compile Include="ResourceBinding.cs" />
+    <Compile Include="ViewModels\EditProfileVm.cs" />
+    <Compile Include="ViewModels\MmeCodeCheckboxDataTemplateVm.cs" />
     <Compile Include="ViewModels\ProfilesPageVM.cs" />
     <Compile Include="ViewModels\ProfilesPage\AddTestParametrUserControlVM.cs" />
     <Compile Include="Wrappers\AccentWrapper.cs" />
@@ -120,6 +129,14 @@
     <Page Include="CustomControls\ProfilesPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="DataTemplates\MmeCodeCheckboxDataTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DataTemplates\ProfileDataTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="DataTemplates\TestParameters\ClampCommutationDataTemplate.xaml" />
     <Page Include="DataTemplates\TestParameters\RACDataTemplate.xaml">
@@ -239,9 +256,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\ListViewItemProfile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\ListViewItemTestParameter.xaml" />
     <Page Include="Styles\NumericUpDown.xaml" />
     <Page Include="Styles\RadioButton.xaml" />
+    <Page Include="Styles\Sizes.xaml" />
     <Page Include="Styles\TextBox.xaml" />
     <Page Include="Styles\TreeViewItemProfile.xaml" />
   </ItemGroup>
@@ -299,6 +321,9 @@
       <Project>{af537bdd-6460-4cca-b894-added01e6b94}</Project>
       <Name>SCME.Types</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MarkupExtension\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
